fix name and path

--- a/.github/workflows/collect_stashes.yml
+++ b/.github/workflows/collect_stashes.yml
@@ -1,11 +1,11 @@
 # This workflows will upload a Python Package using Twine when a release is created
 # For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
 
-name: Upload Python Package
+name: collect stash
 
 on:
   schedule:
-    - cron: '10 * * * *'
+    - cron: '0 * * * *'
 
 jobs:
   build:
@@ -22,7 +22,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run main.py
       run: |
-        python main.py
+        python poe/main.py
       env:
         GCP_KEY: ${{ secrets.GCP_KEY }}
         GCP_BUCKET: ${{ secrets.GCP_BUCKET }}
