--- a/.github/workflows/collect_stashes.yml
+++ b/.github/workflows/collect_stashes.yml
@@ -25,5 +25,5 @@ jobs:
       working-directory: ./poe
       env:
         GCP_KEY: ${{ secrets.GCP_KEY }}
-        GCP_BUCKET: ${{ secrets.GCP_BUCKET }}
+        GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
         GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
