--- a/.github/workflows/collect_stashes.yml
+++ b/.github/workflows/collect_stashes.yml
@@ -1,29 +1,29 @@
-name: collect stash
+# name: collect stash
 
-on:
-  push:
-    branches:
-      - master
-  schedule:
-    - cron: '*/5 * * * *'
+# on:
+#   push:
+#     branches:
+#       - master
+#   schedule:
+#     - cron: '*/5 * * * *'
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Run main.py
-      run: python main.py
-      working-directory: ./poe
-      env:
-        GCP_KEY: ${{ secrets.GCP_KEY }}
-        GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
-        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Set up Python
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: 3.7
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+#     - name: Run main.py
+#       run: python main.py
+#       working-directory: ./poe
+#       env:
+#         GCP_KEY: ${{ secrets.GCP_KEY }}
+#         GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
+#         GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
