--- a/.github/workflows/to_drive.yml
+++ b/.github/workflows/to_drive.yml
@@ -11,6 +11,7 @@ jobs:
   my_job:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: ls 
         run: |
           ls -lha
